CB-32235 Support GVNIC os feature on gcp images
Google Virtual NIC (gVNIC) is a virtual network interface designed specifically for Compute Engine
https://docs.cloud.google.com/compute/docs/networking/using-gvnic
We need this feature to support new generation of instance types in our clusters.
In this task we improve our google image resources to support this GVNIC feature

* In case of new clusters during image registration we enable GVNIC os feature
* We will store the created image resource id for the clusters in stack parameter
* in case of existing clusters (upscale, repair) we will use the stored resource id or the hardcoded one as fallback (for clusters before this commit)
* During upgrade we will enable GVNIC feature as well on the image as during cluster creation
* Redhat8, 9, 10 supports GVNIC interface by default
* Was tested with freeipa, datalake, datahub: existing clusters, new clusters, repair/upscale/upgrade